# trade-rs

./: Cargo.toml  README.md
src/: main.rs
src/analytics/: averages.rs  difference.rs  mod.rs
src/coinbase/: ticker.rs
