[package]
name = "trade-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.18", features = ["derive"] }
hmac = "0.12.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.2"
tokio = { version = "1.20.1", features = ["full"] }
